# autopwn

./: .coveragerc  .gitignore  AGENTS.md  README.md  autopwn.py  fix.md  fix_fmtstr1_routing.md  pyproject.toml  rebuild.md  refactor.md  setup.py  upgraded.md
.github/workflows/: ci.yml
autopwn/: __init__.py  __main__.py  _compat.py  _legacy.py  cli.py  context.py  orchestrator.py  pwntools.md
autopwn/core/: __init__.py  fs.py  logging.py  runner.py  shell_verify.py  tee.py
autopwn/detect/: __init__.py  binsh.py  canary.py  fmtstr.py  overflow.py
autopwn/exp/: __init__.py  base.py  priorities.py  registry.py
autopwn/exp/strategies/: __init__.py  _canary_base.py  canary_execve_syscall.py  canary_ret2libc_put.py  canary_ret2libc_write.py  canary_ret2system.py  execve_syscall.py  fmtstr.py  pie_backdoor.py  ret2libc_put_x32.py  ret2libc_put_x64.py  ret2libc_write_x32.py  ret2libc_write_x64.py  ret2system_x32.py  ret2system_x64.py  rwx_shellcode_x32.py  rwx_shellcode_x64.py
autopwn/orchestrator/: __init__.py  detect.py  recon.py  strategy.py
autopwn/primitives/: __init__.py  base.py  execve_syscall.py  fmtstr.py  pie_backdoor.py  ret2libc_put.py  ret2libc_write.py  ret2system.py  shellcode.py
autopwn/recon/: __init__.py  asm.py  bss.py  checksec.py  frame.py  libc.py  plt.py  rop.py
autopwn/report/: __init__.py  code.py  docx.py  model.py
bugs/: fix.md  fix_asm_and_add_padding.md  fix_tee_bytes_repr.md  fix_x64_recv_timeout.md
logs/comparison/: summary.md
scripts/: baseline_lock.sh  run_verify.sh
tests/: __init__.py  conftest.py
tests/integration/: test_p7_12_strategies_integration.py  test_shell_interaction.py
tests/unit/: test_context_ssl.py  test_core_shell_verify.py  test_core_tee.py  test_detect_binsh.py  test_detect_canary.py  test_detect_fmtstr.py  test_detect_overflow.py  test_exp_base.py  test_exp_canary.py  test_exp_execve_syscall.py  test_exp_fmtstr.py  test_exp_pie_backdoor.py  test_exp_registry.py  test_exp_ret2libc_put.py  test_exp_ret2libc_write.py  test_exp_ret2system.py  test_exp_rwx_shellcode.py  test_orchestrator.py  test_padding_crosscheck.py  test_primitives_base.py  test_primitives_contract.py  test_primitives_execve_syscall.py  test_primitives_fmtstr.py  test_primitives_helper_errors.py  test_primitives_pie_backdoor.py  test_primitives_ret2libc_extra_rsi.py  test_primitives_ret2libc_put.py  test_primitives_ret2libc_write.py  test_primitives_ret2system.py  test_primitives_shellcode.py  test_recon_rop_contract.py
tests/unit/primitives/: __init__.py  _common.py
tests/unit/recon/: test_asm_extract_buffer_lea.py  test_frame.py  test_recon_public_api.py
tools/: check_public_api_coverage.py  check_recon_coverage.py  verify_v31_v40.py
